@@ -6,7 +6,8 @@ delete $ENV{CONVOS_SECRETS};
 my $convos = Convos->new;
 is $convos->config->{backend}, 'Convos::Core::Backend::File', 'default backend';
 is $convos->config->{home}, $ENV{CONVOS_HOME}, 'home from ENV';
-is $convos->config->{organization_name}, 'Nordaaker', 'default name';
+is $convos->config->{organization_name}, 'Nordaaker', 'default organization_name';
+is $convos->config->{organization_url}, 'http://nordaaker.com', 'default organization_url';
 is $convos->config->{hypnotoad}{pid_file}, undef, 'default pid_file';
 ok !$convos->sessions->secure, 'insecure sessions';
 like $convos->secrets->[0], qr/^[a-z0-9]{32}$/, 'default secrets';
@@ -24,13 +25,15 @@ $ENV{CONVOS_PLUGINS}           = 'PluginX';
 $ENV{CONVOS_BACKEND}           = 'Convos::Core::Backend';
 $ENV{CONVOS_FRONTEND_PID_FILE} = 'pidfile.pid';
 $ENV{CONVOS_ORGANIZATION_NAME} = 'cool.org';
+$ENV{CONVOS_ORGANIZATION_URL} = 'http://thorsen.pm';
 $ENV{CONVOS_SECRETS}           = 'super,duper,secret';
 $ENV{CONVOS_SECURE_COOKIES}    = 1;
 delete $ENV{CONVOS_HOME};
 $convos = Convos->new;
 is $convos->config->{backend},           'Convos::Core::Backend',          'env backend';
 like $convos->config->{home},            qr{\W+\.local\W+share\W+convos$}, 'default home';
-is $convos->config->{organization_name}, 'cool.org',                       'env name';
+is $convos->config->{organization_name}, 'cool.org',                       'env organization_name';
+is $convos->config->{organization_url}, 'http://thorsen.pm',                       'env organization_url';
 ok $convos->sessions->secure, 'secure sessions';
 is_deeply($convos->secrets, [qw(super duper secret)], 'env secrets');
 is $plugins[0], 'PluginX', 'PluginX';
